--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -182,65 +182,64 @@
     <Image Include="resources\textures\player_anim2.png" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\ECS\ECS.h" />
-    <ClInclude Include="src\engine\Color.h" />
+    <ClInclude Include="src\engine\ecs\ECS.h" />
+    <ClInclude Include="src\engine\renderer\Color.h" />
     <ClInclude Include="src\engine\Engine.h" />
-    <ClInclude Include="src\engine\Flip.h" />
-    <ClInclude Include="src\engine\Game.h" />
-    <ClInclude Include="src\engine\InputHandler.h" />
-    <ClInclude Include="src\engine\Math.h" />
-    <ClInclude Include="src\engine\SDL_includes.h" />
-    <ClInclude Include="src\engine\TextureManager.h" />
-    <ClInclude Include="src\engine\Utility.h" />
-    <ClInclude Include="src\engine\Vector2.h" />
-    <ClInclude Include="src\Ray2D.h" />
-    <ClInclude Include="src\ECS\Systems\DirectionSystem.h" />
-    <ClInclude Include="src\ECS\Systems\PhysicsSystem.h" />
+    <ClInclude Include="src\engine\renderer\Flip.h" />
+    <ClInclude Include="src\engine\core\Game.h" />
+    <ClInclude Include="src\engine\event\InputHandler.h" />
+    <ClInclude Include="src\engine\utils\Math.h" />
+    <ClInclude Include="src\engine\renderer\TextureManager.h" />
+    <ClInclude Include="src\engine\utils\Utility.h" />
+    <ClInclude Include="src\engine\utils\Vector2.h" />
+    <ClInclude Include="src\engine\renderer\Ray2D.h" />
+    <ClInclude Include="src\engine\ecs\Systems\DirectionSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\PhysicsSystem.h" />
     <ClInclude Include="src\RigidBody.h" />
-    <ClInclude Include="src\Circle.h" />
+    <ClInclude Include="src\engine\renderer\Circle.h" />
     <ClInclude Include="src\Direction.h" />
-    <ClInclude Include="src\ECS\Components\RigidBodyComponent.h" />
-    <ClInclude Include="src\ECS\Components\DirectionComponent.h" />
-    <ClInclude Include="src\ECS\Systems\AnimationSystem.h" />
-    <ClInclude Include="src\ECS\Systems\CollisionSystem.h" />
-    <ClInclude Include="src\ECS\Systems\InputSystem.h" />
-    <ClInclude Include="src\ECS\Systems\LifetimeSystem.h" />
-    <ClInclude Include="src\ECS\Systems\RenderSystem.h" />
-    <ClInclude Include="src\ECS\Systems\StateMachineSystem.h" />
+    <ClInclude Include="src\engine\ecs\Components\RigidBodyComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\DirectionComponent.h" />
+    <ClInclude Include="src\engine\ecs\Systems\AnimationSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\CollisionSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\InputSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\LifetimeSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\RenderSystem.h" />
+    <ClInclude Include="src\engine\ecs\Systems\StateMachineSystem.h" />
     <ClInclude Include="src\ECS\Systems\SystemCommon.h" />
     <ClInclude Include="src\Serialization.h" />
-    <ClInclude Include="src\Shape.h" />
+    <ClInclude Include="src\engine\renderer\Shape.h" />
     <ClInclude Include="src\SingleHeaderLibraries\json.hpp" />
     <ClInclude Include="src\StateMachine\States\JumpState.h" />
     <ClInclude Include="src\StateMachine\States\GroundedState.h" />
-    <ClInclude Include="src\ECS\Components\CollisionComponent.h" />
-    <ClInclude Include="src\AllocationMetrics.h" />
+    <ClInclude Include="src\engine\ecs\Components\CollisionComponent.h" />
+    <ClInclude Include="src\engine\utils\AllocationMetrics.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\Debug.h" />
     <ClInclude Include="src\Defines.h" />
-    <ClInclude Include="src\ECS\Components\AnimationComponent.h" />
-    <ClInclude Include="src\ECS\Components\InputComponent.h" />
-    <ClInclude Include="src\ECS\Components\PlayerController.h" />
-    <ClInclude Include="src\ECS\Components\SpriteSheetComponent.h" />
-    <ClInclude Include="src\ECS\Components\StateMachineComponent.h" />
-    <ClInclude Include="src\ECS\Components\Component.h" />
-    <ClInclude Include="src\ECS\Components.h" />
-    <ClInclude Include="src\AABB.h" />
+    <ClInclude Include="src\engine\ecs\Components\AnimationComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\InputComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\PlayerController.h" />
+    <ClInclude Include="src\engine\ecs\Components\SpriteSheetComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\StateMachineComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\Component.h" />
+    <ClInclude Include="src\engine\ecs\Components.h" />
+    <ClInclude Include="src\engine\renderer\AABB.h" />
     <ClInclude Include="src\ECS\AABBComponent.h" />
     <ClInclude Include="src\ECS\CollisionComponent.h" />
     <ClInclude Include="src\ECS\DirectionComponent.h" />
     <ClInclude Include="src\ECS\DrawComponent.h" />
-    <ClInclude Include="src\ECS\Components\LifetimeComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\LifetimeComponent.h" />
     <ClInclude Include="src\ECS\HitboxComponent.h" />
     <ClInclude Include="src\ECS\KeyboardComponent.h" />
-    <ClInclude Include="src\ECS\Components\RenderComponent.h" />
-    <ClInclude Include="src\ECS\Components\SpriteComponent.h" />
-    <ClInclude Include="src\ECS\Systems\System.h" />
-    <ClInclude Include="src\ECS\Systems.h" />
-    <ClInclude Include="src\ECS\Components\TransformComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\RenderComponent.h" />
+    <ClInclude Include="src\engine\ecs\Components\SpriteComponent.h" />
+    <ClInclude Include="src\engine\ecs\Systems\System.h" />
+    <ClInclude Include="src\engine\ecs\Systems.h" />
+    <ClInclude Include="src\engine\ecs\Components\TransformComponent.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\InputHandler.h" />
-    <ClInclude Include="src\Logger.h" />
+    <ClInclude Include="src\engine\utils\Logger.h" />
     <ClInclude Include="src\StateMachine\BaseStateMachine.h" />
     <ClInclude Include="src\StateMachine\StateMachine.h" />
     <ClInclude Include="src\StateMachine\StateMachines.h" />
@@ -257,12 +256,12 @@
     <ClInclude Include="src\Vec2D.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\ECS\Components\StateMachineComponent.cpp" />
-    <ClCompile Include="src\engine\Game.cpp" />
-    <ClCompile Include="src\engine\InputHandler.cpp" />
-    <ClCompile Include="src\engine\TextureManager.cpp" />
+    <ClCompile Include="src\engine\ecs\Components\StateMachineComponent.cpp" />
+    <ClCompile Include="src\engine\core\Game.cpp" />
+    <ClCompile Include="src\engine\event\InputHandler.cpp" />
+    <ClCompile Include="src\engine\renderer\TextureManager.cpp" />
     <ClCompile Include="src\RigidBody.cpp" />
-    <ClCompile Include="src\AllocationMetrics.cpp" />
+    <ClCompile Include="src\engine\utils\AllocationMetrics.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\InputHandler.cpp" />
     <ClCompile Include="src\main.cpp" />
