--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -192,49 +192,49 @@
     <ClInclude Include="src\engine\utils\Utility.h" />
     <ClInclude Include="src\engine\utils\Vector2.h" />
     <ClInclude Include="src\engine\renderer\Ray2D.h" />
-    <ClInclude Include="src\engine\ecs\Systems\DirectionSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\PhysicsSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\DirectionSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\PhysicsSystem.h" />
     <ClInclude Include="src\engine\physics\RigidBody.h" />
     <ClInclude Include="src\engine\renderer\Circle.h" />
     <ClInclude Include="src\Direction.h" />
-    <ClInclude Include="src\engine\ecs\Components\RigidBodyComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\DirectionComponent.h" />
-    <ClInclude Include="src\engine\ecs\Systems\AnimationSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\CollisionSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\InputSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\LifetimeSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\RenderSystem.h" />
-    <ClInclude Include="src\engine\ecs\Systems\StateMachineSystem.h" />
+    <ClInclude Include="src\engine\ecs\components\RigidBodyComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\DirectionComponent.h" />
+    <ClInclude Include="src\engine\ecs\systems\AnimationSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\CollisionSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\InputSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\LifetimeSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\RenderSystem.h" />
+    <ClInclude Include="src\engine\ecs\systems\StateMachineSystem.h" />
     <ClInclude Include="src\ECS\Systems\SystemCommon.h" />
     <ClInclude Include="src\Serialization.h" />
     <ClInclude Include="src\engine\renderer\Shape.h" />
     <ClInclude Include="src\SingleHeaderLibraries\json.hpp" />
     <ClInclude Include="src\StateMachine\States\JumpState.h" />
     <ClInclude Include="src\StateMachine\States\GroundedState.h" />
-    <ClInclude Include="src\engine\ecs\Components\CollisionComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\CollisionComponent.h" />
     <ClInclude Include="src\engine\utils\AllocationMetrics.h" />
     <ClInclude Include="src\engine\utils\Debug.h" />
     <ClInclude Include="src\Defines.h" />
-    <ClInclude Include="src\engine\ecs\Components\AnimationComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\InputComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\PlayerController.h" />
-    <ClInclude Include="src\engine\ecs\Components\SpriteSheetComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\StateMachineComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\Component.h" />
+    <ClInclude Include="src\engine\ecs\components\AnimationComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\InputComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\PlayerController.h" />
+    <ClInclude Include="src\engine\ecs\components\SpriteSheetComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\StateMachineComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\Component.h" />
     <ClInclude Include="src\engine\ecs\Components.h" />
     <ClInclude Include="src\engine\renderer\AABB.h" />
     <ClInclude Include="src\ECS\AABBComponent.h" />
     <ClInclude Include="src\ECS\CollisionComponent.h" />
     <ClInclude Include="src\ECS\DirectionComponent.h" />
     <ClInclude Include="src\ECS\DrawComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\LifetimeComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\LifetimeComponent.h" />
     <ClInclude Include="src\ECS\HitboxComponent.h" />
     <ClInclude Include="src\ECS\KeyboardComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\RenderComponent.h" />
-    <ClInclude Include="src\engine\ecs\Components\SpriteComponent.h" />
-    <ClInclude Include="src\engine\ecs\Systems\System.h" />
+    <ClInclude Include="src\engine\ecs\components\RenderComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\SpriteComponent.h" />
+    <ClInclude Include="src\engine\ecs\systems\System.h" />
     <ClInclude Include="src\engine\ecs\Systems.h" />
-    <ClInclude Include="src\engine\ecs\Components\TransformComponent.h" />
+    <ClInclude Include="src\engine\ecs\components\TransformComponent.h" />
     <ClInclude Include="src\engine\utils\Logger.h" />
     <ClInclude Include="src\StateMachine\BaseStateMachine.h" />
     <ClInclude Include="src\StateMachine\StateMachine.h" />
@@ -251,7 +251,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\core\Engine.cpp" />
-    <ClCompile Include="src\engine\ecs\Components\StateMachineComponent.cpp" />
+    <ClCompile Include="src\engine\ecs\components\StateMachineComponent.cpp" />
     <ClCompile Include="src\engine\event\InputHandler.cpp" />
     <ClCompile Include="src\engine\renderer\TextureManager.cpp" />
     <ClCompile Include="src\engine\physics\RigidBody.cpp" />
