Move a bunch of basic includes into one file so including engine will include inputhandler, etc

--- a/protegon.vcxproj
+++ b/protegon.vcxproj
@@ -183,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\core\Engine.h" />
+    <ClInclude Include="src\engine\core\Includes.h" />
     <ClInclude Include="src\engine\ecs\ECS.h" />
     <ClInclude Include="src\engine\renderer\Color.h" />
     <ClInclude Include="src\engine\renderer\Flip.h" />
