--- a/protegon.vcxproj.filters
+++ b/protegon.vcxproj.filters
@@ -271,6 +271,9 @@
     <ClInclude Include="src\engine\renderer\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\engine\core\Includes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
